Fixed sidebar collapse with small screens

--- a/client-app/assets/scss/site.scss
+++ b/client-app/assets/scss/site.scss
@@ -42,6 +42,14 @@
     inset: 0;
 }
 
+
+@include media-breakpoint-up(md) {
+    .position-relative-md {
+        position: relative !important;
+    }
+}
+
+
 /*Rounded circle*/
 .rounded-circle {
     width: $kontext-rounded-circle-size;
